@@ -26,6 +26,9 @@ package com.qmxtech.qmxmcstdlib.tile.computers.controls;
 import com.qmxtech.qmxmcstdlib.color.ColorValue;
 import com.qmxtech.qmxmcstdlib.computers.controls.IControlColoredLight;
 
+import li.cil.oc.api.machine.Arguments;
+import li.cil.oc.api.machine.Callback;
+import li.cil.oc.api.machine.Context;
 import net.minecraft.nbt.NBTTagCompound;
 
 import javax.annotation.Nonnull;
@@ -38,6 +41,38 @@ import javax.annotation.Nonnull;
 public class TEControlColoredLight extends TEControlLight implements IControlColoredLight
 {
     // Public Methods
+
+        @Callback( doc = "function(color:number):number -- Set the color by ordinal color value ('colors' API). Returns a number representing the new ordinal color.", direct = true, limit = 32 )
+        public Object[] setColor( Context context, Arguments args ) throws Exception
+        {
+            return IControlColoredLight.super.setColor( context, args );
+        }
+
+        @SuppressWarnings( "unused" )
+        @Callback( doc = "function(color/r:number[,g:number,b:number]):number,{r:number,g:number,b:number} -- Set the color using the given RGB value, or the " +
+                "given individual RGB values. Returns a number representing the new RGB value, and an object representing the individual RGB values.", direct = true, limit = 32 )
+        public Object[] setColorRGB( Context context, Arguments args ) throws Exception
+        {
+            return IControlColoredLight.super.setColorRGB( context, args );
+        }
+
+        @SuppressWarnings( "unused" )
+        @Callback( doc = "function():number[,number,{r:number,g:number,b:number}] -- Get the current color by ordinal value ('colors' API). Returns a number " +
+                "representing the ordinal color. If this value is '16', a custom color was set and its RGB value and an object representing the individual RGB " +
+                "values will also be returned. Guaranteed not to throw.", direct = true, limit = 32 )
+        public Object[] getColor( Context context, Arguments args )
+        {
+            return IControlColoredLight.super.getColor( context, args );
+        }
+
+
+        @SuppressWarnings( "unused" )
+        @Callback( doc = "function():number,{r:number,g:number,b:number} -- Get the current color as an RGB value. Returns a number representing the new RGB value, " +
+                "and an object representing the individual RGB values. Guaranteed not to throw.", direct = true, limit = 32 )
+        public Object[] getColorRGB( Context context, Arguments args )
+        {
+            return IControlColoredLight.super.getColorRGB( context, args );
+        }
 
         @Override public void setColor( ColorValue color, boolean withWorldUpdate )
         {
@@ -67,7 +102,7 @@ public class TEControlColoredLight extends TEControlLight implements IControlCol
 
     // Protected Fields
 
-        protected ColorValue color;
+        protected ColorValue color = ColorValue.WHITE;
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
