@@ -18,4 +18,12 @@ Key
 
 16AUG19 0.0.1 Matthew J. Schultz (Korynkai) <matt@qmxtech.com>
 ==============================================================
-* Added CONTRIBUTING.md, CHANGELOG and .gitlab-ci.yml files.
++ Added CONTRIBUTING.md, CHANGELOG and .gitlab-ci.yml files.
+
+
+
+24AUG19 0.0.1 Matthew J. Schultz (Korynkai) <matt@qmxtech.com>
+==============================================================
++ Colored, controllable, haloed lighting API added and completed, to be showcased in Cadmus Infrastructure; more to come soon...
+~ Many other changes made, mainly to build.gradle and .gitlab-ci.yml.
+* All current features should now be stable.
